hakyll: squash /subscripts bug where the HTML-snippet-code in the description (necessary to forcibly demonstrate the different kinds of citation) breaks the naive string substitution into <meta> tags; solve the same way as the title problem, by generating a 'plain' version to safely substitute into the <meta> tags instead

--- a/template/default.html
+++ b/template/default.html
@@ -41,8 +41,8 @@
     <meta name="twitter:site" content="gwern.net">
     <meta name="og:site" content="gwern.net">
     <meta name="og:type" content="article">
-    $if(description)$<meta name="description" content="$description$">
-    <meta name="og:description" content="$description$">$endif$
+    $if(description)$<meta name="description" content="$descriptionPlain$">
+    <meta name="og:description" content="$descriptionPlain$">$endif$
     $if(thumbnail)$<meta property="og:image" content="https://gwern.net$thumbnail$">
     $if(thumbnailText)$<meta property="og:image:alt" content="$thumbnailText$">$endif$
     $else$<meta property="og:image" content="https://gwern.net/static/img/logo/logo-whitebg-large-border.png">
