--- a/css/colors-dark-GENERATED.css
+++ b/css/colors-dark-GENERATED.css
@@ -301,7 +301,7 @@
 
 	/*	Nav header.
 	 */
-	--GW-nav-header-link-color: #8b8b8b;
+	--GW-nav-header-link-color: #999;
 	--GW-nav-header-link-hover-color: #fff;
 
 	/*	X of the day.
