--- a/css/style-GENERATED.css
+++ b/css/style-GENERATED.css
@@ -1571,11 +1571,9 @@ section.collapse > .heading {
     transition:
         color 0.1s ease;
 }
-.collapse-inline.expanded > .disclosure-button.start .icon {
+.collapse-inline.expanded > .disclosure-button.start .icon,
+.collapse-inline.has-abstract.expanded-not > .disclosure-button.start .icon {
     margin-right: -0.4em;
-}
-.collapse-inline.expanded > .disclosure-button.end .icon {
-    margin-left: -0.4em;
 }
 
 .collapse-inline > .disclosure-button .icon svg {
@@ -1583,21 +1581,23 @@ section.collapse > .heading {
     width: 1em;
     height: 100%;
 }
-.collapse-inline.expanded-not > .disclosure-button.start .icon svg:nth-of-type(2) {
-    margin: 0 -0.5em;
+
+.collapse-inline > .disclosure-button.end .icon svg:nth-last-of-type(2) {
+	margin: 0 -0.5em 0 0;
+	height: 85%;
+	margin: 0 -0.4em 0 0;
 }
 
-.collapse-inline.expanded-not > .disclosure-button.end {
-    display: none;
+.collapse-inline.expanded > .disclosure-button.end .icon svg:nth-last-of-type(2) {
+    transform: rotateZ(0.5turn);
 }
-
-.collapse-inline.expanded-not > .disclosure-button:hover .icon svg:nth-of-type(2) {
-    transform: rotateZ(0.25turn);
+.collapse-inline.expanded-not:hover > .disclosure-button.end .icon svg:nth-last-of-type(2) {
+    transform: rotateZ(0.5turn);
     transition:
         transform 1s ease;
 }
-.collapse-inline.expanded-not.just-clicked > .disclosure-button:hover .icon svg:nth-of-type(2) {
-    transform: none;
+.collapse-inline.expanded-not.just-clicked > .disclosure-button.end:hover .icon svg:nth-last-of-type(2) {
+	transform: none;
     transition: none;
 }
 
