CSS/HTML: rm indent+justified A/B test; null result, so no change to status quo of indent+justify (see /ab-test-indent)

--- a/css/default.css
+++ b/css/default.css
@@ -924,7 +924,7 @@ ol.has-floats > li {
 
 /*  List headings are normally paragraphs, but should never be indented.
  */
-.markdownBody.indented p.list-heading {
+.markdownBody p.list-heading {
     text-indent: 0;
 }
 
